force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <description>Written by: the create leg. The account this person belongs to, which is the grain their identity is keyed at.</description>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>AAO_Shadow_Persons</relationshipName>
    <relationshipLabel>AAO Shadow Persons</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>