force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Anchor_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Anchor_Count__c</fullName>
    <description>Written by: the create leg, derived from AAO_Anchors__c on every write. How many distinct utterances anchor this person. Stored rather than computed on read because the map and the Inspector both render it and a long text field cannot be filtered or sorted in SOQL. A DERIVED NUMBER IS NEVER THE AUTHORITY: AAO_Anchors__c is, and this is rebuilt from it, never edited beside it.</description>
    <label>Anchor Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>