force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_Display_Name__c</fullName>
    <description>Written by: the create leg, from the DETERMINISTIC PARSE, never from the raw roster string. The mangled source form stays on AAO_Source_Name__c beside it per the stored-form law.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>