force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Email__c.field-meta.xml
<CustomField>
    <fullName>AAO_Email__c</fullName>
    <description>Written by: the create leg, where the roster carried one. Null is ordinary and is exactly why some people never resolve.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>