force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_First_Name__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>