force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_Last_Name__c</fullName>
    <description>Required in substance: a person with no surname is a person we cannot name, and Contact would refuse the promotion anyway.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>