force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Participant__c.field-meta.xml
<CustomField>
    <fullName>AAO_Participant__c</fullName>
    <description>Written by: the create leg. The participation row this shadow was made from. Restrict on delete: participation is the evidence that this person exists at all, and a shadow whose participant vanished is a person nothing accounts for.</description>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>AAO_Participant__c</referenceTo>
    <relationshipName>AAO_Shadow_Persons</relationshipName>
    <relationshipLabel>AAO Shadow Persons</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>