force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Promoted_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Promoted_At__c</fullName>
    <description>When the promotion happened. Written by the writer at the instant it lands, never reconstructed: the same law the projection watermark carries.</description>
    <label>Promoted At</label>
    <type>DateTime</type>
</CustomField>