force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Promoted_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Promoted_Contact__c</fullName>
    <description>THE PROMOTION PATH. Set when this person later resolves to, or is created as, a Contact. The shadow row is never deleted on promotion: it is what the claims written before the promotion were keyed against, and deleting it would break the trail that says who they were when we only knew them from a call.</description>
    <label>Promoted Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AAO_Shadow_Persons</relationshipName>
    <relationshipLabel>AAO Shadow Persons</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>