force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAO_Reason__c</fullName>
    <description>WHY THIS ROW EXISTS RATHER THAN A CONTACT, and the causes are not the same fact. Toggle_Off is the customer&apos;s configuration and is expected-unavailable rather than an error; Create_Failed is a real refusal by the org and belongs in the admin error log. Unresolvable means the ladder found nothing to match and no name could be parsed. Ambiguous means the ladder found MORE THAN ONE and refused to pick, which is the Identification flag&apos;s case. Single_Token means all we have is one spoken word: it may link and it may never create, because one token satisfies the LastName schema without being anybody&apos;s full name (eightieth stamp).</description>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toggle_Off</fullName>
            </value>
            <value>
                <fullName>Create_Failed</fullName>
            </value>
            <value>
                <fullName>Unresolvable</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Single_Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>