force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>AAO_Reason_Detail__c</fullName>
    <description>The org&apos;s own error text where a create was refused. FAILURE LEGIBLE: an admin reading this row should not have to reproduce the failure to learn what it was.</description>
    <label>Reason Detail</label>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>