force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source_Name__c</fullName>
    <description>THE ROSTER STRING AS IT ARRIVED, mangled and all: &quot;Vargas, Jefferson [EMR/SYSS/AT/MEDI]&quot;. The stored-form law - wrong text is marked wrong, never deleted - and the practical reason: the parse is ours and can be wrong, and the only way to re-derive a name is to have kept what we derived it from. ASR mangles names (Stacey to &quot;Tracy&quot;, Claude to &quot;clogged&quot;), so the source form is the audit trail on every identity decision.</description>
    <label>Source Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>