force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <description>Demo and test rows, so a real org&apos;s data and a fixture can never be counted together.</description>
    <label>Synthetic</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>