force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Utterance_End__c.field-meta.xml
<CustomField>
    <fullName>AAO_Utterance_End__c</fullName>
    <description>Written by: the create leg. Character offset into the utterance Source&apos;s normalized text, zero-based, end-exclusive, the same arithmetic every span in this system uses. Byte offsets mean nothing against any other bytes, so this number is only ever read together with AAO_Utterance_Source__c.</description>
    <label>Utterance End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>