force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Utterance_Quote__c.field-meta.xml
<CustomField>
    <fullName>AAO_Utterance_Quote__c</fullName>
    <description>Written by: the create leg. The words that introduced this person, byte-exact against the utterance Source. Carried rather than derived on read for the reason every Span carries its quote: a byte range with no quote beside it cannot be checked without fetching the artifact, and a receipt nobody can check is not a receipt. THIS FIELD IS EVIDENCE and may be quoted. Long text, so it is never filtered in SOQL.</description>
    <label>Utterance Quote</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>