force-app/main/default/objects/AAO_Shadow_Person__c/fields/AAO_Utterance_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Utterance_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: the create leg. The artifact the name was spoken in. THE SECOND ADMISSIBLE EXISTENCE PROOF (wiring proposal v3, section 4): a mention&apos;s proof of existence is that somebody said the name, verbatim-anchored, which is the same evidence class everything else in this system stands on. Admissible ALONGSIDE AAO_Participant__c rather than instead of it, so an attendee with no Contact and a person merely named both have a lawful row without either fabricating the other&apos;s proof. Restrict on delete for the same reason the participation lookup restricts: the evidence that this person exists at all must not vanish under the row that rests on it.</description>
    <label>Utterance Source</label>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>Shadow People</relationshipLabel>
    <relationshipName>Shadow_People</relationshipName>
    <type>Lookup</type>
</CustomField>